--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+dependencies:
+  flutter:
+    sdk: flutter
+  intl: ^0.19.0
+  image_picker: ^1.1.2
